# weather-esp-rs

./: Cargo.toml  README.md  cfg.toml.example
src/: main.rs
